# mcp-browser-use

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
documentation/: CONFIGURATION.md
src/mcp_browser/: __init__.py
src/mcp_browser/use/: __init__.py  mcp_browser_use.py
src/mcp_browser_use/: __init__.py  client.py  mcp_browser_use.py  server.py
src/mcp_browser_use/agent/: custom_agent.py  custom_massage_manager.py
src/mcp_browser_use/browser/: browser_manager.py  custom_browser.py  custom_context.py
src/mcp_browser_use/controller/: custom_controller.py
src/mcp_browser_use/utils/: logging.py  utils.py
tests/: conftest.py  test_agent_state.py  test_browser_manager.py  test_client_session.py  test_custom_agent_controller.py  test_gif_creation.py  test_logging_configuration.py  test_server.py  test_summarize_messages.py  test_utils.py
tests/agent/: test_custom_agent.py
tests/controller/: test_custom_controller.py
tests/stubs/PIL/: __init__.py
tests/stubs/browser_use/: __init__.py  utils.py
tests/stubs/browser_use/agent/: service.py  views.py
tests/stubs/browser_use/agent/message_manager/: service.py  views.py
tests/stubs/browser_use/browser/: __init__.py  context.py  events.py  profile.py  views.py
tests/stubs/browser_use/controller/: service.py
tests/stubs/browser_use/controller/registry/: views.py
tests/stubs/browser_use/telemetry/: views.py
tests/stubs/langchain_core/language_models/: __init__.py  chat_models.py
tests/stubs/langchain_core/messages/: __init__.py
tests/stubs/langchain_core/prompts/: __init__.py
tests/stubs/langchain_openai/: __init__.py
tests/stubs/langchain_openai/chat_models/: __init__.py  base.py
tests/utils/: test_utils.py
