[project]
name = "mcp_browser_use"
version = "0.1.0"
description = "MCP server for browser-use"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "browser-use~=0.7.9",
    "fastapi>=0.115.6",
    "fastmcp>=0.4.1",
    "instructor>=1.7.2",
    "langchain>=0.3.14",
    "langchain-google-genai>=2.1.1",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.2.14",
    "Pillow>=10.1.0",
    "python-dotenv>=1.0.1",
    "pyperclip>=1.9.0",
    "openai>=1.59.5",
    "pydantic>=2.10.5",
    "uvicorn>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_browser_use", "src/mcp_browser"]

[project.scripts]
mcp-browser-use = "mcp_browser_use.server:main"
