[project]
name = "mcp_browser_use"
version = "0.1.0"
description = "This Python project is a FastAPI server implementing MCP Server protocol Browser automation via browser-use library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.11.9",
    "uvicorn>=0.37.0",
    "browser-use>=0.7.9",
    "fastapi>=0.117.1",
    "fastmcp>=2.12.4",
    "instructor>=1.11.3",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.1",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.20",
    "langchain-ollama>=0.2.2",
    "openai>=1.109.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "pyperclip>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_browser_use"]

[project.scripts]
mcp-browser-use = "mcp_browser_use.server:launch_mcp_browser_use_server"
